--- a/index.html.html
+++ b/index.html.html
@@ -76,6 +76,13 @@
             <div class="faq-answer">
                 <strong> kuota kelas pembelajaran telah penuh healties dapat mengikuti batch selanjutnya, pantau terus informasinya melalui kanal instagram lifeatkemkes atau langsung cek secara berkala ke website  LMS </strong>
             </div>
+      <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+                Pembelajaran yang saya Pilih meminta Verifikasi?
+            </div>
+            <div class="faq-answer">
+                <strong> Hi Healthies , jika pembelajaran bapak/ibu meminta verifikasi di pembelajaran yang di selenggarakan Pusat Pengembangan Kompetensi Aparatur kemenkes mohon mengecek akun profile Plataran sehat  bapak/ibu apakah bapak/ibu ASN Kemeneks tipe peserta adalah Pegawai kemenkes nakes atau pegawai kemenkes non nakes  </strong>
+            </div>
         </div>
     </div>
 
