--- a/index.html.html
+++ b/index.html.html
@@ -76,6 +76,7 @@
             <div class="faq-answer">
                 <strong> kuota kelas pembelajaran telah penuh healties dapat mengikuti batch selanjutnya, pantau terus informasinya melalui kanal instagram lifeatkemkes atau langsung cek secara berkala ke website  LMS </strong>
             </div>
+     </div>
       <div class="faq-item">
             <div class="faq-question" onclick="toggleAnswer(this)">
                 Pembelajaran yang saya Pilih meminta Verifikasi?
