--- a/index.html.html
+++ b/index.html.html
@@ -82,7 +82,8 @@
                 Pembelajaran yang saya Pilih meminta Verifikasi?
             </div>
             <div class="faq-answer">
-                <strong> Hi Healthies , jika pembelajaran bapak/ibu meminta verifikasi di pembelajaran yang di selenggarakan Pusat Pengembangan Kompetensi Aparatur kemenkes mohon mengecek akun profile Plataran sehat  bapak/ibu apakah bapak/ibu ASN Kemeneks tipe peserta adalah Pegawai kemenkes nakes atau pegawai kemenkes non nakes  </strong>
+                <strong> Hi Healthies , jika pembelajaran bapak/ibu meminta verifikasi di pembelajaran yang di selenggarakan Pusat Pengembangan Kompetensi Aparatur kemenkes mohon mengecek akun profile Plataran sehat  bapak/ibu apakah bapak/ibu ASN Kemeneks tipe peserta adalah Pegawai kemenkes nakes atau pegawai kemenkes non nakes 
+( maka pembelajaran  yang di selenggarakan Pusat Pengembangan Kompetensi Aparatur kemenke khusus untuk ASN Kemenkes saja)  </strong>
             </div>
         </div>
     </div>
