--- a/index.html.html
+++ b/index.html.html
@@ -83,7 +83,7 @@
             </div>
             <div class="faq-answer">
                 <strong> Hi Healthies , jika pembelajaran bapak/ibu meminta verifikasi di pembelajaran yang di selenggarakan Pusat Pengembangan Kompetensi Aparatur kemenkes mohon mengecek akun profile Plataran sehat  bapak/ibu apakah bapak/ibu ASN Kemeneks tipe peserta adalah Pegawai kemenkes nakes atau pegawai kemenkes non nakes 
-( maka pembelajaran  yang di selenggarakan Pusat Pengembangan Kompetensi Aparatur kemenke khusus untuk ASN Kemenkes saja)  </strong>
+( maka pembelajaran  yang di selenggarakan oleh Pusat Pengembangan Kompetensi Aparatur kemenke khusus untuk ASN Kemenkes saja)  </strong>
             </div>
         </div>
     </div>
