--- a/index.html.html
+++ b/index.html.html
@@ -82,8 +82,16 @@
                 Pembelajaran yang saya Pilih meminta Verifikasi?
             </div>
             <div class="faq-answer">
-                <strong> Hi Healthies , jika pembelajaran bapak/ibu meminta verifikasi di pembelajaran yang di selenggarakan oleh Pusat Pengembangan Kompetensi Aparatur kemenkes mohon mengecek akun profile Plataran sehat  bapak/ibu apakah bapak/ibu ASN Kemeneks tipe peserta adalah Pegawai kemenkes nakes atau pegawai kemenkes non nakes 
-( maka pembelajaran  yang di selenggarakan oleh Pusat Pengembangan Kompetensi Aparatur kemenkes khusus untuk ASN Kemenkes saja)  </strong>
+                <strong> Hi Healthies , jika pembelajaran bapak/ibu meminta verifikasi di pembelajaran yang di selenggarakan Pusat Pengembangan Kompetensi Aparatur kemenkes mohon mengecek akun profile Plataran sehat  bapak/ibu apakah bapak/ibu ASN Kemeneks tipe peserta adalah Pegawai kemenkes nakes atau pegawai kemenkes non nakes 
+( Maka Pembelajaran  yang di selenggarakan Pusat Pengembangan Kompetensi Aparatur kemenke untuk ASN Kemenkes saja)  </strong>
+            </div>
+           </div>
+      <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+                Bagaimana jika nilai hasil post test yang saya peroleh belum mencapai batas kelulusan?
+            </div>
+            <div class="faq-answer">
+                <strong> Hi Healthies, kamu diberikan kesempatan untuk mencoba kembali ujian post test sampai batas waktu kelas dibuka. Ayo tetap berusaha dan semoga berhasil</strong>
             </div>
         </div>
     </div>
