--- a/index.html.html
+++ b/index.html.html
@@ -79,7 +79,7 @@
      </div>
       <div class="faq-item">
             <div class="faq-question" onclick="toggleAnswer(this)">
-                Pembelajaran yang saya Pilih meminta Verifikasi?
+                Pembelajaran yang saya pilih meminta verifikasi?
             </div>
             <div class="faq-answer">
                 <strong> Hi Healthies , jika pembelajaran bapak/ibu meminta verifikasi di pembelajaran yang di selenggarakan Pusat Pengembangan Kompetensi Aparatur kemenkes mohon mengecek akun profile Plataran sehat  bapak/ibu apakah bapak/ibu ASN Kemeneks tipe peserta adalah Pegawai kemenkes nakes atau pegawai kemenkes non nakes 
