--- a/index.html.html
+++ b/index.html.html
@@ -93,6 +93,14 @@
             <div class="faq-answer">
                 <strong> Hi Healthies, kamu diberikan kesempatan untuk mencoba kembali ujian post test sampai batas waktu kelas dibuka. Ayo tetap berusaha dan semoga berhasil</strong>
             </div>
+               </div>
+      <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+               Sertifikat saya tidak bisa di download ?
+            </div>
+            <div class="faq-answer">
+                <strong> Hi Healthies, mohon maaf sekali sebelum nya karena ada perbaikan sistem pada  template sertifikat dan Tanda tangan mohon untuk menuggu saja  terima kasih</strong>
+            </div>
         </div>
     </div>
 
