--- a/index.html.html
+++ b/index.html.html
@@ -101,6 +101,39 @@
             <div class="faq-answer">
                 <strong> Hi Healthies, mohon maaf sekali sebelum nya karena ada perbaikan sistem pada  template sertifikat dan Tanda tangan mohon untuk menuggu saja  terima kasih</strong>
             </div>
+           </div>
+      <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+               Pada saat mengakses
+web / login tiba tiba di
+halaman web muncul
+message error :
+{"code":400,
+"message": "Email
+sudah digunakan,
+“errors":
+{“UNIQUE_USERS_EM
+AIL” :
+“UNIQUE_USERS_EMA
+IL must be unique”}} ?
+            </div>
+            <div class="faq-answer">
+                <strong>Pastikan unit kerja pada profil e-office sudah sesuai serta no HP dan email sudah terisi
+pada portal e-office
+masuk ke dalam portal e-office
+https://portal-eoffice.kemkes.go.id/
+2. masuk ke dalam halaman profile saya,
+lalu pastikan data unit kerja sudah
+terinput dan sudah sesuai
+3. masuk ke laman LMS :
+https://lms.kemkes.go.id/
+4. pastikan masuk ke LMS dengan menu
+"Masuk" dan bukan "Daftar"
+5. pilih sebagai Pegawai Kemenkes
+6. Tunggu beberapa saat, maka halaman
+muka akan muncul
+7. Masuk ke dalam halaman profile di LMS</strong>
+            </div>
         </div>
     </div>
 
