--- a/index.html.html
+++ b/index.html.html
@@ -134,6 +134,22 @@ https://lms.kemkes.go.id/
 muka akan muncul
 7. Masuk ke dalam halaman profile di LMS</strong>
             </div>
+             </div>
+      <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+              Registrasi MOOC A2E dan MOOC Budaya Kerja Bagi CPNS Kemenkes Tahun 2025
+            </div>
+            <div class="faq-answer">
+                <strong> Selamat Pagi Bapak/ibu berikut kami kirimkan link Registrasi kelas MOOC bagi CPNS yang meminta Verifikasi Kelas MOOC Budaya Kerja dan MOOC A2E mohon di isi data dengan benar pada tautan berikut 
+
+https://link.kemkes.go.id/RegistrasiCPNS2025
+
+ Jika sudah mengisi mohon cek berkala 
+mengisi email mohon jangan typo
+
+Terima Kasih
+Salam Sehat 🙏🏻</strong>
+            </div>
         </div>
     </div>
 
