--- a/index.html.html
+++ b/index.html.html
@@ -140,9 +140,10 @@ muka akan muncul
               Registrasi MOOC A2E dan MOOC Budaya Kerja Bagi CPNS Kemenkes Tahun 2025
             </div>
             <div class="faq-answer">
-                <strong> Selamat Pagi Bapak/ibu berikut kami kirimkan link Registrasi kelas MOOC bagi CPNS yang meminta Verifikasi Kelas MOOC Budaya Kerja dan MOOC A2E mohon di isi data dengan benar pada tautan berikut 
+ <strong> Selamat Pagi Bapak/ibu berikut kami kirimkan link Registrasi kelas MOOC bagi CPNS yang meminta Verifikasi Kelas MOOC Budaya Kerja dan MOOC A2E mohon di isi data dengan benar pada tautan berikut 
 
-https://link.kemkes.go.id/RegistrasiCPNS2025
+<a Herf=" https://link.kemkes.go.id/RegistrasiCPNS2025">Registrasi MOOC CPNS Tahun 2025 </a>.
+                
 
  Jika sudah mengisi mohon cek berkala 
 mengisi email mohon jangan typo
