--- a/index.html.html
+++ b/index.html.html
@@ -142,14 +142,11 @@ muka akan muncul
             <div class="faq-answer">
  <strong> Selamat Pagi Bapak/ibu berikut kami kirimkan link Registrasi kelas MOOC bagi CPNS yang meminta Verifikasi Kelas MOOC Budaya Kerja dan MOOC A2E mohon di isi data dengan benar pada tautan berikut 
 
-<a Herf=" https://link.kemkes.go.id/RegistrasiCPNS2025 " target="_blank">Registrasi MOOC CPNS Tahun 2025 </a>.
-                
+
+    <a href="https://link.kemkes.go.id/RegistrasiCPNS2025" target="_blank">Registrasi MOOC CPNS Tahun 2025 </a>.</strong>            
 
  Jika sudah mengisi mohon cek berkala 
-mengisi email mohon jangan typo
 
-Terima Kasih
-Salam Sehat 🙏🏻</strong>
             </div>
         </div>
     </div>
