--- a/index.html.html
+++ b/index.html.html
@@ -140,7 +140,7 @@ muka akan muncul
               Registrasi MOOC A2E dan MOOC Budaya Kerja Bagi CPNS Kemenkes Tahun 2025
             </div>
             <div class="faq-answer">
- <strong> Selamat Pagi Bapak/ibu berikut kami kirimkan link Registrasi kelas MOOC bagi CPNS yang meminta Verifikasi Kelas MOOC Budaya Kerja dan MOOC A2E mohon di isi data dengan benar pada tautan berikut 
+ <strong> Bapak/ibu berikut kami kirimkan link Registrasi kelas MOOC bagi CPNS yang meminta Verifikasi Kelas MOOC Budaya Kerja dan MOOC A2E mohon di isi data dengan benar pada tautan berikut 
 
 
     <a href="https://link.kemkes.go.id/RegistrasiCPNS2025" target="_blank">Registrasi MOOC CPNS Tahun 2025 </a>.</strong>            
