--- a/index.html.html
+++ b/index.html.html
@@ -143,8 +143,8 @@ muka akan muncul
  <strong> Bapak/ibu berikut kami kirimkan link Registrasi kelas MOOC bagi CPNS yang meminta Verifikasi Kelas MOOC Budaya Kerja dan MOOC A2E mohon di isi data dengan benar pada tautan berikut 
 
 
-    <a href="https://link.kemkes.go.id/RegistrasiCPNS2025" target="_blank">Registrasi MOOC CPNS Tahun 2025 </a>.</strong>       
-    Jika sudah mengisi mohon cek berkala 
+    <a href="https://link.kemkes.go.id/RegistrasiCPNS2025" target="_blank">Registrasi MOOC CPNS Tahun 2025 </a>.Jika sudah mengisi mohon cek berkala </strong>       
+    
 
         </div>
     </div>
