--- a/index.html.html
+++ b/index.html.html
@@ -143,9 +143,18 @@ muka akan muncul
  <strong> Bapak/ibu berikut kami kirimkan link Registrasi kelas MOOC bagi CPNS yang meminta Verifikasi Kelas MOOC Budaya Kerja dan MOOC A2E mohon di isi data dengan benar pada tautan berikut 
 
 
-    <a href="https://link.kemkes.go.id/RegistrasiCPNS2025" target="_blank">Registrasi MOOC CPNS Tahun 2025 </a>.Jika sudah mengisi mohon cek berkala </strong>       
+    <a href="https://link.kemkes.go.id/RegistrasiCPNS2025" target="_blank">Registrasi MOOC CPNS Tahun 2025 </a>.Jika sudah mengisi mohon cek berkala </strong>    
+                
     
 
+        </div>
+           <div class="faq-question" onclick="toggleAnswer(this)">
+                saya mau lihat tutorial pengisian Pulse check? 
+            </div>
+            <div class="faq-answer">
+               <strong> Hi Healthies, ,healties dapat menonton totorialnya di link  <a href="https://drive.google.com/file/d/18VbdB6D4lPrcB17ef339Tj-i9KtFuLzY/view" target="_blank">video berikut </a>.</strong>
+                  <strong> Hi Healthies, , berikut link survei  <a href="https://s.kemkes.go.id/pulsecheck2025" target="_blank">link survei </a>.</strong>
+            </div>
         </div>
     </div>
 
