--- a/index.html.html
+++ b/index.html.html
@@ -148,6 +148,7 @@ muka akan muncul
     
 
         </div>
+           <div class="faq-item">
            <div class="faq-question" onclick="toggleAnswer(this)">
                 saya mau lihat tutorial pengisian Pulse check? 
             </div>
