--- a/index.html.html
+++ b/index.html.html
@@ -18,6 +18,20 @@
         <h1>FAQ - Pertanyaan yang Sering Diajukan</h1>
         <div class="faq-item">
             <div class="faq-question" onclick="toggleAnswer(this)">
+                Pembelejaran yang saya ambil meminta verifikasi ?
+            </div>
+            <div class="faq-answer">
+               <strong> Bagi ASN Kementerian Kesehatan, tidak perlu melakukan verifikasi karena akan otomatis masuk ke kelas.
+                 Namun, apabila terdapat peserta yang tetap diminta verifikasi, mohon bantu cek kembali profilnya di Plataran Sehat dengan ketentuan berikut:
+                ✅ Tipe Peserta: Pegawai Kemenkes (Nakes/Non Nakes)
+                ✅ Profesi Lainnya: Pegawai Kementerian Kesehatan
+                Jika akun Bapak/Ibu sudah sesuai dengan ketentuan di atas namun masih diminta verifikasi, kemungkinan besar kelas tersebut termasuk kategori kelas tertutup (khusus undangan).
+                Silakan abaikan dan tidak perlu bergabung pada kelas tersebut.
+              🙏 Terima kasih atas perhatian dan kerja samanya.</a>.</strong>
+            </div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
                 Saya ingin merubah tipe profesi yang dimiliki kira - kira bagaimana caranya ya? 
             </div>
             <div class="faq-answer">
