--- a/index.html.html
+++ b/index.html.html
@@ -104,6 +104,7 @@
             <div class="faq-question" onclick="toggleAnswer(this)">
                 Bagaimana jika nilai hasil post test yang saya peroleh belum mencapai batas kelulusan?
             </div>
+          
             <div class="faq-answer">
                 <strong> Hi Healthies, kamu diberikan kesempatan untuk mencoba kembali ujian post test sampai batas waktu kelas dibuka. Ayo tetap berusaha dan semoga berhasil</strong>
             </div>
@@ -168,6 +169,7 @@ muka akan muncul
                <strong> Hi Healthies, ,healties dapat menonton totorialnya di link  <a href="https://drive.google.com/file/d/18VbdB6D4lPrcB17ef339Tj-i9KtFuLzY/view" target="_blank">video berikut </a>.</strong>
                   <strong> Hi Healthies, , berikut link survei  <a href="https://s.kemkes.go.id/pulsecheck2025" target="_blank">link survei </a>.</strong>
             </div>
+                </div>
                 <div class="faq-item">
             <div class="faq-question" onclick="toggleAnswer(this)">
                Webinar Penguatan Kompetensi Teknis Bidang Tugas (PKTBT) Jabatan Fungsional Kesehatan meminta Verifikasi?
@@ -188,4 +190,5 @@ muka akan muncul
     <script src="script.js"></script>
 </body>
 </html>
+
 
