--- a/index.html.html
+++ b/index.html.html
@@ -29,6 +29,15 @@
                 Silakan abaikan dan tidak perlu bergabung pada kelas tersebut.
               🙏 Terima kasih atas perhatian dan kerja samanya.</a>.</strong>
             </div>
+            <div class="faq-item">
+            <div class="faq-question" onclick="toggleAnswer(this)">
+                Pembelajaran dan post-test saya sudah melewati batas waktu yang ditentukan. Mohon arahan, apa langkah yang perlu saya lakukan selanjutnya?
+            </div>
+            <div class="faq-answer">
+               <strong> Pembelajaran dan post-test telah melewati batas waktu sehingga tidak dapat dibuka kembali. Silakan tinggalkan pembelajaran tersebut, kemudian ikuti pembelajaran lain yang tersedia atau menunggu batch selanjutnya.
+
+                    Terima kasih atas pengertiannya..</a>.</strong>
+            </div>
         </div>
         <div class="faq-item">
             <div class="faq-question" onclick="toggleAnswer(this)">
@@ -191,6 +200,7 @@ muka akan muncul
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
