--- a/index.html.html
+++ b/index.html.html
@@ -29,6 +29,7 @@
                 Silakan abaikan dan tidak perlu bergabung pada kelas tersebut.
               🙏 Terima kasih atas perhatian dan kerja samanya.</a>.</strong>
             </div>
+              </div>
             <div class="faq-item">
             <div class="faq-question" onclick="toggleAnswer(this)">
                 Pembelajaran dan post-test saya sudah melewati batas waktu yang ditentukan. Mohon arahan, apa langkah yang perlu saya lakukan selanjutnya?
@@ -200,6 +201,7 @@ muka akan muncul
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
