--- a/index.html.html
+++ b/index.html.html
@@ -38,6 +38,7 @@
                <strong> Pembelajaran dan post-test telah melewati batas waktu sehingga tidak dapat dibuka kembali. Silakan tinggalkan pembelajaran tersebut, kemudian ikuti pembelajaran lain yang tersedia atau menunggu batch selanjutnya.
 
                     Terima kasih atas pengertiannya..</a>.</strong>
+                </div>
             </div>
         </div>
         <div class="faq-item">
@@ -201,6 +202,7 @@ muka akan muncul
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
